--- a/web/css/admin/adminMain.css
+++ b/web/css/admin/adminMain.css
@@ -13,6 +13,9 @@
 body {
 	font-family: Montserrat;
 }
+table {
+	text-align: center;
+}
 
 .Ad_head {
 	position: relative;
@@ -103,13 +106,16 @@ body {
 .nav_btn {
 	color: #222;
 	text-decoration:none;
-	margin: 15px;
+	margin: 10px;
 	-webkit-transition: color .2s;
 	cursor: pointer;
 }
 .nav_btn:hover {
 	color: #F66;
 	text-decoration:none;
+}
+.Ad_btns {
+	margin: auto;
 }
 @media (max-width: 1260px) {
 	.Ad_Lef {
