--- a/web/css/admin/adminMain.css
+++ b/web/css/admin/adminMain.css
@@ -128,6 +128,80 @@ td {
 	text-decoration:none;
 }
 
+.cover {
+	opacity: 0.7;
+	position: absolute;
+	left: 0%;
+	top: -999px;
+	width: 100%;
+	height: 100%;
+	background-color: #333;
+	z-index: 100;
+	-webkit-transition:all .4s ease-in-out;
+}
+
+.showSetting {
+	overflow: hidden;
+	position: absolute;
+	z-index: 101;
+	opacity: 0;
+	width: 500px;
+	height: 500px;
+	background-color: #FFF;
+	border-radius: 5%;
+	left: 50%;
+	top: -600px;
+	-webkit-transform: translateX(-50%);
+	-webkit-transition:all .7s ease-in-out;
+}
+.Set_pic {
+	position: relative;
+	width: 100%;
+	height: 35%;
+	background-size: cover;
+	background-position: 50% 50%;
+	background-color: #099;
+}
+.Set_tit {
+	position: relative;
+	color: #EEE;
+	font-size: 2em;
+	text-align: center;
+	text-shadow: 5px 5px 5px #000;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+}
+.Set_xm {
+	margin: 5%;
+}
+.Set_btn_M {
+	width: 100%;
+}
+.Set_btn {
+	border: 0px;
+	background-color: #06C;
+	position: relative;
+	color: #EEE;
+	width: 100%;
+	height: 40px;
+	-webkit-transition:all .2s ease-in-out;
+}
+.Set_btn:hover {
+	background-color: #09F;
+}
+.Set_sp {
+
+}
+.Set_dele {
+	cursor: pointer;
+	-webkit-transition:all .2s ease-in-out;
+}
+.Set_dele:hover {
+	color: #099;
+}
+.Set_input {
+	
+}
 
 @media (max-width: 1260px) {
 	.Ad_Lef {
