--- a/web/css/admin/adminMain.css
+++ b/web/css/admin/adminMain.css
@@ -182,15 +182,22 @@ td {
 	background-color: #06C;
 	position: relative;
 	color: #EEE;
-	width: 100%;
 	height: 40px;
 	-webkit-transition:all .2s ease-in-out;
+}
+.handlegreen {
+	background-color: #096 !important;
+}
+.handlegreen:hover {
+	background-color: #3C9 !important;
 }
 .Set_btn:hover {
 	background-color: #09F;
 }
 .Set_sp {
-
+	font-size: 1.1em;
+	margin: 5px 0px;
+	width: 90px !important;
 }
 .Set_dele {
 	cursor: pointer;
@@ -199,10 +206,11 @@ td {
 .Set_dele:hover {
 	color: #099;
 }
-.Set_input {
-	
+.Set_btn_P {
+	font-size: 1.5em;
+	text-align: center;
+	height: 25px;
 }
-
 @media (max-width: 1260px) {
 	.Ad_Lef {
 		width: 30%;
