--- a/web/css/main/login.css
+++ b/web/css/main/login.css
@@ -15,7 +15,7 @@ body {
 }
 .M_log {
 	position: relative;
-	width: 40%;
+	width: 500px;
 	height: 390px;
 	background-color: #EEE;
 	border-radius: 5px;
