增加了测试拖动的数据库和拖动demo
全部修改成html后缀，完成静态用户的项目页面和项目细节页面，完成h5通过拖动事件修改数据库内容的状态，完成显示内容细节样式，调试完成上传文件的
测试demo，下一步运用到实际运用中

--- a/views/admin/itemcreate.html
+++ b/views/admin/itemcreate.html
@@ -73,7 +73,7 @@
 			</section>
 			<p id="createResult" class="Set_btn_P"></p><br>
 			<div class="Set_btn_M">
-				<button class="Set_btn col-xs-6 handlegreen" onclick="insertItem()">创建</button>
+				<button class="Set_btn col-xs-6 handlegreen" onclick="insertItem()" style="top:10px;">创建</button>
 				<button class="Set_btn col-xs-6" onclick="hideAll()">取消</button>
 			</div>
 		</section>
