--- a/views/site/test.html
+++ b/views/site/test.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<form action="index.php?r=site/test1" method="post" enctype="multipart/form-data">
+<form action="index.php?r=test/upload" method="post" enctype="multipart/form-data">
 请选择您要上传的文件：<input type="file" name='myFile' />
 <input type="submit" value="上传文件" />
 </form>
