添加了我的今日，完成了酷炫的交互界面
添加了样式和页面控制，下一步把任务界面从静态的变为动态的页面，设计项目任务的数据库以及同步金永辉的数据

--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -12,7 +12,7 @@
 		<title>管理员</title>
 	</head>
 	<body onload="getRawData()">
-		<header class="Ad_head">
+		<header class="Ad_head" id="head">
 			<button class="btn btn-primary hd_downbtn" onclick="tiggle()">下拉</button>
 		</header>
 		<section class="col-xs-2 Ad_Lef" id="showandhide">
@@ -98,6 +98,7 @@
 						};
 						tableBody += '</tbody>';
 						document.getElementById('userMsgShow').innerHTML = tableHead+tableBody;
+						document.getElementById('head').innerHTML += '<a class="nav_btn" id="'+data.userIdNow+'" >'+data.userName+'</a>';
 					} else {
 						alert("系统错误" + textStatus);
 					}
