--- a/web/css/admin/adminArticle.css
+++ b/web/css/admin/adminArticle.css
@@ -9,3 +9,44 @@
     background-image: url("../../images/1.jpg");
     opacity:0.7;
 }
+
+.set_de{
+    font-size: 1.2em;
+    margin-top: 30px;
+
+}
+.cover_3{
+    opacity: 0;
+    position: absolute;
+    left: 0%;
+    top: -999px;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    z-index: 100;
+    -webkit-transition:all .4s ease-in-out;
+}
+.showSetting_3{
+    overflow: hidden;
+    position: absolute;
+    z-index: 101;
+    opacity: 0;
+    width: 200px;
+    height: 300px;
+    background-color: #909090;
+    opacity: 0.4;
+    border-radius: 5%;
+    left: 50%;
+    top: -600px;
+    -webkit-transform: translateX(-50%);
+    -webkit-transition:all .4s ease-in-out;
+}
+.Set_tit_3{
+    position: relative;
+    color: #EEE;
+    font-size: 1.2em;
+    text-align: center;
+    text-shadow: 5px 5px 5px #000;
+    top: 13px;
+    -webkit-transform: translateY(-50%);
+}
