--- a/views/admin/articles.html
+++ b/views/admin/articles.html
@@ -72,7 +72,7 @@
 				</div>
 			</div>
 		</div>
-		<!-- 以下为库存添加，默认隐藏 -->
+		<!-- 以下为库存种类添加，默认隐藏 -->
 		<section class="cover" id="coverDiv" onclick="hideAll()"></section>
 		<section class="showSetting" id="SetDiv">
 			<div class="Set_pic articlebk">
