--- a/views/admin/articles.html
+++ b/views/admin/articles.html
@@ -50,7 +50,7 @@
 		</div>
 		<div class="col-xs-10 Ad_Rig">
 			<h2>库存管理</h2><br>
-			<div class="Ad_RShow">
+			<div class="Ad_RShow"><br>
 				<span class="Ad_btns">
 					<a class="nav_btn" onclick="getRawArticleData()">所有库存</a>
 					<a class="nav_btn" onclick="addArticle()">物品添加</a>
@@ -67,7 +67,7 @@
 		<!-- 以下为库存添加，默认隐藏 -->
 		<section class="cover" id="coverDiv" onclick="hideAll()"></section>
 		<section class="showSetting" id="SetDiv">
-			<div class="Set_pic articlebk" ;">
+			<div class="Set_pic articlebk">
 				<p class="Set_tit">物品添加</p>
 			</div>
 			<section class="Set_xm">
