--- a/web/css/user/userHomepage.css
+++ b/web/css/user/userHomepage.css
@@ -1,3 +1,11 @@
+.coverOpacity {
+	top: 0px;
+	left: 0px;
+	z-index: 5;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+}
 .circle {
 	z-index: 10;
 	overflow: hidden;
@@ -136,6 +144,13 @@
 	border-left: 10px solid #CCC;
 	margin-bottom: 10px;
 	-webkit-transition:all .3s ease-in-out;
+	overflow: visible;
+}
+.UrgenterBorder {
+	border-left: 10px solid #F96;
+}
+.UrgentestBorder {
+	border-left: 10px solid #F66;
 }
 .mission_type:hover {
 	background-color: #EEE;
@@ -159,4 +174,38 @@
 	font-size: 3em;
 	-webkit-transform: translateY(-50%) translateX(-50%);
 	-webkit-transition:all .3s ease-in-out;
+}
+.centerIst_btn {
+	z-index: 2;
+	position: absolute;
+	top: 30%;
+	left: 50%;
+	-webkit-transform: translateX(-50%);
+}
+.today_Show_miss {
+	width: 100%;
+	height: 75%;
+	overflow: auto;
+}
+.mission_SpUrgent {
+	margin:0px 20px;
+	float: right;
+	position: relative;
+	z-index: 20;
+	width: 15px;
+	height: 45px;
+	-webkit-transition:all .3s ease-in-out;
+}
+.mission_SpUrgent:hover {
+	-webkit-transform: scale(2,1);
+}
+.urgentest {
+	background-color: #F66;
+}
+.urgenter {
+	background-color: #F96;
+}
+.normal {
+	background-color: #CCC;
+	margin-right: 49px;
 }
