修复一处“昨天还好好的”的坑爹未知BUG

--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -56,7 +56,7 @@
 					<a class="nav_btn" onclick="getRawData()">所有用户</a>
 					<a class="nav_btn" onclick="addUser()">用户添加</a>
 					<a class="nav_btn" onclick="userManage()">用户管理</a>
-					<input class="enjoy-css" type="text" id="searchUser" placeholder="学号" onkeydown='if(event.keyCode==13){searchUserhandle()}'>
+					<input class="enjoy-css" type="text" id="searchUser" placeholder="学号或名字" onkeydown='if(event.keyCode==13){searchUserhandle()}'>
 					<a class="nav_btn" onclick="searchUserhandle()">搜索</a>
 				</span><hr>
 				<br>
