--- a/views/admin/momentsmene.html
+++ b/views/admin/momentsmene.html
@@ -57,7 +57,7 @@
 				<span class="Ad_btns">
 						<a class="nav_btn" onclick="getMomentData_dongtai()">所有动态</a>
 						<a class="nav_btn" onclick="addUser()">动态置顶</a>
-						<input class="enjoy-css" type="text" id="searchMoment" placeholder="输入查询内容" onkeydown='if(event.keyCode==13){searchMoment()}'>
+						<input class="enjoy-css" type="text" id="searchMoment" placeholder="学号或内容" onkeydown='if(event.keyCode==13){searchMoment()}'>
 						<a class="nav_btn" onclick="searchMoment()">动态搜索</a>
 				</span><hr><br>
 				<div class="Ad_User_Main">
