完成动态模块功能，数据库在根目录。|库存，动态基本完成，除了样式和分页。

--- a/views/admin/momentsmene.html
+++ b/views/admin/momentsmene.html
@@ -66,7 +66,7 @@
 					<div class="pageStyle" id="pagenav">
 						<button onclick="beforePage()">上一页（感觉有问题 后面弄）</button>
 						<span id="页码"></span>
-						<button onclick="afterPage()">下一页</button>
+						<button onclick="afterPage()">下一页（感觉有问题 后面弄）</button>
 						<div id="thePage">
 
 						</div>
