--- a/views/admin/momentsmene.html
+++ b/views/admin/momentsmene.html
@@ -72,6 +72,7 @@
         <script src="js/adminHref.js"></script>
         <script src="js/adminMoments.js"></script>
         <script src="js/jquery.min.js"></script>
+        <script src="js/main.js"></script>
 		<script>
 			var show = 0;
 			var nowPage = 1;
@@ -92,7 +93,7 @@
 						var tableHead = '<thead><tr><td>学号</td><td>内容</td><td>点赞数</td><td>姓名</td><td>删除</td></tr></thead>';
 						var tableBody = '<tbody>';
 						for (var i = 0; i < data.moments.length; i++) {
-							tableBody += '<tr><td>'+data.moments[i].XH_ID+'</td><td>'+data.moments[i].Content+'</td><td>'+data.moments[i].like_Num+'</td><td>'+data.moments[i].username+'</td><td><div class="Set_dele glyphicon glyphicon-remove" onclick="deleteMom('+data.moments[i].id+')"></div></td></tr>';
+							tableBody += '<tr><td>'+data.moments[i].XH_ID+'</td><td>'+handleLength(data.moments[i].Content, 5)+'</td><td>'+data.moments[i].like_Num+'</td><td>'+data.moments[i].username+'</td><td><div class="Set_dele glyphicon glyphicon-remove" onclick="deleteMom('+data.moments[i].id+')"></div></td></tr>';
 						};
 						tableBody += '</tbody>';
 						document.getElementById('MomentsData').innerHTML = tableHead+tableBody;
