--- a/views/site/test.html
+++ b/views/site/test.html
@@ -7,7 +7,8 @@
 <body>
 <form action="index.php?r=test/upload" method="post" enctype="multipart/form-data">
 请选择您要上传的文件：<input type="file" name='myFile' />
-<input type="submit" value="上传文件" />
+<input type="submit" value="上传文件" /><br>
+<a href="index.php?r=site/getfile&filename=files/3619c1121fe5828573f628984482ae56.m4a">下载</a>
 </form>
 </body>
 </html>
