--- a/views/user/ItemDetail.html
+++ b/views/user/ItemDetail.html
@@ -8,19 +8,14 @@
 	<link rel="stylesheet" href="css/main/normalize.css">
 	<link rel="stylesheet" href="css/teambition.css">
 	<title>teamBition</title>
-	<style>
-/*		body{  
-	    	overflow-x: hidden;
-	    	overflow-y: hidden;
-		} */ 
-	</style>
+	<style>html,body{height:100%;}</style>
 </head>
 <body onload="getMomentData()">
 	<header>
 		<nav>
 			<div class="nav_pic" style="background-image: url(images/SuesYiBanteam.png);"></div>
 			<section class="nav_sec1">
-				<a class="nav_btn" href="index.php?r=user/index">项目</a>
+				<a class="nav_btn" href="index.php?r=user/item">项目</a>
 				<a class="nav_btn" href="index.php?r=user/homepage">我的</a>
 				<a class="nav_btn" href="index.php?r=user/order">排班</a>
 				<a class="nav_btn" href="index.php?r=user/getmess">收件箱</a>
@@ -32,8 +27,6 @@
 
 		</nav>
 	</header>
-	<section class="sec_nav">
-
 	</section>
 	<section class="mask_main">
 		<div class="mask_m" ondrop="drop(event)" ondragover="allowDrop(event)" id="getStarted">
