--- a/views/admin/articles.html
+++ b/views/admin/articles.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="css/admin/adminArticle.css">
 		<link rel="stylesheet" href="css/Main.css">
 		<title>管理员</title>
+		<style>html,body {width: 100%; height: 100%;}</style>
 	</head>
 	<body>
 		<header class="Ad_head">
@@ -179,11 +180,6 @@
 			$(function(){
 				getRawArticleData();
 			})
-
-
-
-
-
 		</script>
 	</body>
 </html>
