--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="css/admin/adminUser.css">
 		<link rel="stylesheet" href="css/Main.css">
 		<title>管理员</title>
+		<style>html,body {width: 100%; height: 100%;}</style>
 	</head>
 	<body onload="getRawData()">
 		<header class="Ad_head" id="head">
