--- a/views/admin/itemshow.html
+++ b/views/admin/itemshow.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="css/main/normalize.css">
 		<link rel="stylesheet" href="css/admin/adminMain.css">
 		<title>管理员</title>
+		<style>html,body {width: 100%; height: 100%;}</style>
 	</head>
 	<body>
 		<header class="Ad_head">
