--- a/views/admin/momentsmene.html
+++ b/views/admin/momentsmene.html
@@ -10,8 +10,8 @@
 		<link rel="stylesheet" href="css/admin/adminUser.css">
 		<link rel="stylesheet" href="css/admin/adminMoments.css">
 		<link rel="stylesheet" href="css/Main.css">
-
 		<title>管理员</title>
+		<style>html,body {width: 100%; height: 100%;}</style>
 	</head>
 	<body>
 		<header class="Ad_head">
